Fixed the alignment of the error/warning icon

--- a/design/admin2/stylesheets/autosave.css
+++ b/design/admin2/stylesheets/autosave.css
@@ -19,7 +19,7 @@ background:url(../../standard/images/as-loader.gif) no-repeat 0 1px;
 
 .as-error
 {
-background:url(../../standard/images/icons-sprite.png) no-repeat 0 -51px;
+background:url(../../standard/images/icons-sprite.png) no-repeat 0 -49px;
 }
 
 .as-error span
